--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
-  <artifactId>CuriousCatBehavior</artifactId>
+  <groupId>entjava.zcmarcus.ccb</groupId>
+  <artifactId>ccb</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>CuriousCatBehavior Maven Webapp</name>
+  <name>CuriousCatBehavior</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -59,9 +59,24 @@
       <artifactId>log4j-api</artifactId>
       <version>2.13.0</version>
     </dependency>
-
-
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>local</id>
+      <properties>
+        <profile.name>local</profile.name>
+      </properties>
+    </profile>
+    <!--      <profile>-->
+    <!--        <id>aws</id>-->
+    <!--        <properties>-->
+    <!--          <profile.name>aws</profile.name>-->
+    <!--        </properties>-->
+    <!--      </profile>-->
+  </profiles>
+
+
 
   <build>
     <finalName>CuriousCatBehavior</finalName>
@@ -98,5 +113,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
+
+
   </build>
 </project>
