--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
     <maven-surefire-plugin-version>3.0.0-M4</maven-surefire-plugin-version>
     <mysql-version>8.0.18</mysql-version>
-    <hibernate-version>5.4.4.Final</hibernate-version>
+    <hibernate-version>5.4.12.Final</hibernate-version>
 
 
 
@@ -120,6 +120,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven-compiler-plugin-version}</version>
+          <configuration>
+            <source>1.11</source>
+            <target>1.11</target>
+
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
