--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test_cats_db
+url=jdbc:mysql://localhost:3306/cats_db
 username=root
 password=student
