--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,3 @@
-property.filepath = /Users/Zeph/IdeaProjects/CuriousCatBehavior/logs
 appenders = console, file, hibernate
 
 appender.console.type = Console
@@ -8,7 +7,7 @@ appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c
 
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName=${filepath}/CuriousCatBehavior.log
+appender.file.fileName=${log.filepath}/ccb.log
 appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
@@ -16,8 +15,8 @@ appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} -
 ## It will delete log files if there are more than 7
 appender.hibernate.type = RollingFile
 appender.hibernate.name = HIBFILE
-appender.hibernate.fileName = ${filepath}/hibernate.log
-appender.hibernate.filePattern=${filepath}/hibernate_%d{yyyyMMdd HH:mm}.log
+appender.hibernate.fileName = ${log.filepath}/hibernate.log
+appender.hibernate.filePattern=${log.filepath}/hibernate_%d{yyyyMMdd HH:mm}.log
 appender.hibernate.layout.type=PatternLayout
 appender.hibernate.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 appender.hibernate.policies.type = Policies
