--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,3 +1,5 @@
+name=PropertiesConfig
+property.filepath = C:\\logs
 appenders = console, file, hibernate
 
 appender.console.type = Console
@@ -7,7 +9,8 @@ appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c
 
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName=${log.filepath}/ccb.log
+appender.file.fileName=${filepath}\\ccb.log
+
 appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
@@ -15,8 +18,9 @@ appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} -
 ## It will delete log files if there are more than 7
 appender.hibernate.type = RollingFile
 appender.hibernate.name = HIBFILE
-appender.hibernate.fileName = ${log.filepath}/hibernate.log
-appender.hibernate.filePattern=${log.filepath}/hibernate_%d{yyyyMMdd HH:mm}.log
+appender.hibernate.fileName = ${filepath}\\hibernate.log
+
+appender.hibernate.filePattern=${filepath}\\hibernate_%d{yyyyMMdd HH:mm}.log
 appender.hibernate.layout.type=PatternLayout
 appender.hibernate.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 appender.hibernate.policies.type = Policies
