Fix logging issue by renaming log4j2 properties file ;-). Add basic custom 404 error jsp and associated entry in web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,15 @@
          version="3.0">
 
   <display-name>Curious Cat Behavior</display-name>
+
+
+
+
+
+  <!--  Custom error pages -->
+  <error-page>
+    <error-code>404</error-code>
+    <location>/custom_error_pages/error404.jsp</location>
+  </error-page>
+
 </web-app>
