--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,5 +1,5 @@
 name=PropertiesConfig
-property.filepath = C:\\logs
+property.filepath = /Users/Zeph/IdeaProjects/CuriousCatBehavior/logs
 appenders = console, file, hibernate
 
 appender.console.type = Console
@@ -9,7 +9,7 @@ appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c
 
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName=${filepath}\\ccb.log
+appender.file.fileName=${filepath}/ccb.log
 
 appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
@@ -18,9 +18,9 @@ appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} -
 ## It will delete log files if there are more than 7
 appender.hibernate.type = RollingFile
 appender.hibernate.name = HIBFILE
-appender.hibernate.fileName = ${filepath}\\hibernate.log
+appender.hibernate.fileName = ${filepath}/hibernate.log
 
-appender.hibernate.filePattern=${filepath}\\hibernate_%d{yyyyMMdd HH:mm}.log
+appender.hibernate.filePattern=${filepath}/hibernate_%d{yyyyMMdd HH:mm}.log
 appender.hibernate.layout.type=PatternLayout
 appender.hibernate.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 appender.hibernate.policies.type = Policies
