Add form-based authentication. Update context.xml and web.xml. Clean up on several .jsps

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>CuriousCatBehavior</name>
-  <!-- FIXME change it to the project's website -->
+  <!-- TODO: change it to the project's website -->
   <url>http://18.217.107.47:8080/</url>
 
   <properties>
