--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,12 +27,27 @@
           <role-name>admin</role-name>
       </auth-constraint>
   </security-constraint>
-  
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>login</web-resource-name>
+            <url-pattern>/loginAction</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
+
   <security-role>
       <role-name>admin</role-name>
   </security-role>
+  <security-role>
+      <role-name>user</role-name>
+  </security-role>
 
-  <!--  Custom error pages -->
+
+    <!--  Custom error pages -->
   <error-page>
       <error-code>404</error-code>
       <location>/custom_error_pages/error404.jsp</location>
