--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <maven-war-plugin-version>3.2.3</maven-war-plugin-version>
     <properties-maven-plugin-version>1.0.0  </properties-maven-plugin-version>
     <tomcat-catalina-version>8.5.3</tomcat-catalina-version>
+    <google-api-client-version>1.30.8</google-api-client-version>
   </properties>
 
   <dependencies>
@@ -103,6 +104,12 @@
       <version>${tomcat-catalina-version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>${google-api-client-version}</version>
+    </dependency>
+
 
   </dependencies>
 
