Added Youtube Data API (API Key only, no OAuth). Implemented first working test for Youtube search results response data

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,7 @@ fabric.properties
 
 # Database scripts
 /dba/
+
+# Google API Client
+src/main/resources/google.secrets.properties
+src/main/resources/youtube.properties
