--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@
     <properties-maven-plugin-version>1.0.0  </properties-maven-plugin-version>
     <tomcat-catalina-version>8.5.3</tomcat-catalina-version>
     <google-api-client-version>1.30.8</google-api-client-version>
+    <jackson-version>2.10.0</jackson-version>
+    <jersey-version>2.29.1</jersey-version>
+    <google-api-services-youtube-version>v3-rev20200312-1.30.9</google-api-services-youtube-version>
+<!--    <google-oauth-client-jetty-version>1.30.6</google-oauth-client-jetty-version>-->
   </properties>
 
   <dependencies>
@@ -104,11 +108,62 @@
       <version>${tomcat-catalina-version}</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>${jersey-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+      <version>${jersey-version}</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>${jackson-version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson-version}</version>
+    </dependency>
+
     <dependency>
       <groupId>com.google.api-client</groupId>
       <artifactId>google-api-client</artifactId>
       <version>${google-api-client-version}</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-youtube -->
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-youtube</artifactId>
+      <version>${google-api-services-youtube-version}</version>
+    </dependency>
+
+<!--    Google OAuth dependencies -->
+<!--    <dependency>-->
+<!--      <groupId>com.google.api-client</groupId>-->
+<!--      <artifactId>google-api-client-java6</artifactId>-->
+<!--      <version>${google-api-client-version}</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.google.oauth-client</groupId>-->
+<!--      <artifactId>google-oauth-client-jetty</artifactId>-->
+<!--      <version>${google-oauth-client-jetty-version}</version>-->
+<!--    </dependency>-->
+
 
 
   </dependencies>
