--- a/.gitignore
+++ b/.gitignore
@@ -53,9 +53,13 @@ fabric.properties
 # Project profiles
 /profiles
 
+# Database properties
+src/test/resources/database.properties
+
 # Database scripts
 /dba/
 
 # Google API Client
 src/main/resources/google.secrets.properties
 src/main/resources/youtube.properties
+
