--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
       <auth-method>FORM</auth-method>
       <form-login-config>
           <form-login-page>/login.jsp</form-login-page>
-          <form-error-page>/login_error.jsp</form-error-page>
+          <form-error-page>/loginError.jsp</form-error-page>
       </form-login-config>
   </login-config>
 
@@ -20,13 +20,39 @@
 
   <security-constraint>
       <web-resource-collection>
-          <web-resource-name>maintenance_home</web-resource-name>
+          <web-resource-name>maintenance</web-resource-name>
           <url-pattern>/admin/*</url-pattern>
       </web-resource-collection>
       <auth-constraint>
           <role-name>admin</role-name>
       </auth-constraint>
   </security-constraint>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>youtubeSearch</web-resource-name>
+            <url-pattern>/youtubeSearch.jsp</url-pattern>
+            <url-pattern>/youtubeSearchAction</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>createPost</web-resource-name>
+            <url-pattern>/createPostChoice.jsp</url-pattern>
+            <url-pattern>/createPostForm.jsp</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
 
     <security-constraint>
         <web-resource-collection>
