Add to maintenance pages: link to view user profile, link to view post. Fix setting of videoUrl on createPostForm

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -37,14 +37,16 @@ appender.hibernate.strategy.delete.ifAccumulatedFileCount.exceeds = 7
 loggers=file, hibernate
 
 logger.file.name = entjava.zcmarcus.ccb
-logger.file.level = debug
+#for testing and verbose logging, change 'warn' to 'debug'
+logger.file.level = warn
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
 #logger.file.additivity prevents logging in the parent (root, which is console in this case)
 logger.file.additivity = false
 
 logger.hibernate.name = org.hibernate
-logger.hibernate.level = debug
+#for testing and verbose logging, change 'warn' to 'debug'
+logger.hibernate.level = warn
 logger.hibernate.appenderRefs = file
 logger.hibernate.appenderRef.file.ref = HIBFILE
 logger.hibernate.additivity = false
