--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,21 +4,21 @@
 	      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
-  <display-name>Curious Cat Behavior</display-name>
+    <display-name>Curious Cat Behavior</display-name>
 
 
-  <!-- Use form-based auth -->
-  <login-config>
+    <!-- Use form-based auth -->
+    <login-config>
       <auth-method>FORM</auth-method>
       <form-login-config>
           <form-login-page>/login.jsp</form-login-page>
           <form-error-page>/loginError.jsp</form-error-page>
       </form-login-config>
-  </login-config>
+    </login-config>
 
-  <!-- Protect the admin maintenance home page (aka search page for users, posts, etc.)  -->
+    <!-- Protect the admin maintenance home page (aka search page for users, posts, etc.)  -->
 
-  <security-constraint>
+    <security-constraint>
       <web-resource-collection>
           <web-resource-name>maintenance</web-resource-name>
           <url-pattern>/admin/*</url-pattern>
@@ -26,38 +26,43 @@
       <auth-constraint>
           <role-name>admin</role-name>
       </auth-constraint>
-  </security-constraint>
-
-<!--    <security-constraint>-->
-<!--        <web-resource-collection>-->
-<!--            <web-resource-name>youtubeSearch</web-resource-name>-->
-<!--            <url-pattern>/youtubeSearch.jsp</url-pattern>-->
-<!--            <url-pattern>/youtubeSearchAction</url-pattern>-->
-<!--        </web-resource-collection>-->
-<!--        <auth-constraint>-->
-<!--            <role-name>admin</role-name>-->
-<!--            <role-name>user</role-name>-->
-<!--        </auth-constraint>-->
-<!--    </security-constraint>-->
-
-
-
-<!--    <security-constraint>-->
-<!--        <web-resource-collection>-->
-<!--            <web-resource-name>createPost</web-resource-name>-->
-<!--            <url-pattern>/createPostChoice.jsp</url-pattern>-->
-<!--            <url-pattern>/createPostForm.jsp</url-pattern>-->
-<!--        </web-resource-collection>-->
-<!--        <auth-constraint>-->
-<!--            <role-name>admin</role-name>-->
-<!--            <role-name>user</role-name>-->
-<!--        </auth-constraint>-->
-<!--    </security-constraint>-->
+    </security-constraint>
 
     <security-constraint>
         <web-resource-collection>
-            <web-resource-name>login</web-resource-name>
+            <web-resource-name>youtubeSearch</web-resource-name>
+            <url-pattern>/youtubeSearch.jsp</url-pattern>
+            <url-pattern>/youtubeSearchAction</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>addContent</web-resource-name>
+            <url-pattern>/createPostChoice.jsp</url-pattern>
+            <url-pattern>/createPostForm.jsp</url-pattern>
+            <url-pattern>/createPostSuccess.jsp</url-pattern>
+            <url-pattern>/createPostAction</url-pattern>
+            <url-pattern>/addCommentAction</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>loginLogout</web-resource-name>
             <url-pattern>/loginAction</url-pattern>
+            <url-pattern>/loginSuccess</url-pattern>
+            <url-pattern>/logoutAction.jsp</url-pattern>
+            <url-pattern>/logoutSuccess.jsp</url-pattern>
         </web-resource-collection>
 
         <auth-constraint>
@@ -66,18 +71,17 @@
         </auth-constraint>
     </security-constraint>
 
-  <security-role>
+    <security-role>
       <role-name>admin</role-name>
-  </security-role>
-  <security-role>
+    </security-role>
+    <security-role>
       <role-name>user</role-name>
-  </security-role>
-
+    </security-role>
 
     <!--  Custom error pages -->
-  <error-page>
+    <error-page>
       <error-code>404</error-code>
       <location>/custom_error_pages/error404.jsp</location>
-  </error-page>
+    </error-page>
 
 </web-app>
