--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,12 @@
 
     <display-name>Curious Cat Behavior</display-name>
 
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+        <welcome-file>/index.html</welcome-file>
+        <welcome-file>/index.htm</welcome-file>
+        <welcome-file>/index.jsp</welcome-file>
+    </welcome-file-list>
 
     <!-- Use form-based auth -->
     <login-config>
