--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -62,6 +62,19 @@
         </auth-constraint>
     </security-constraint>
 
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>editContent</web-resource-name>
+            <url-pattern>/editPostAction</url-pattern>
+            <url-pattern>/editPostForm.jsp</url-pattern>
+            <url-pattern>/deletePostSuccess.jsp</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
+
     <!-- Protect logout-related pages-->
     <security-constraint>
         <web-resource-collection>
