--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -75,19 +75,7 @@
     </auth-constraint>
 </security-constraint>
 
-<security-constraint>
-    <web-resource-collection>
-        <web-resource-name>editProfile</web-resource-name>
-        <url-pattern>/editProfileAction</url-pattern>
-        <url-pattern>/editProfile.jsp</url-pattern>
-        <url-pattern>/editProfileSuccess.jsp</url-pattern>
-        <url-pattern>/deleteProfileSuccess.jsp</url-pattern>
-    </web-resource-collection>
-    <auth-constraint>
-        <role-name>admin</role-name>
-        <role-name>user</role-name>
-    </auth-constraint>
-</security-constraint>
+
 
     <!-- Protect logout-related pages-->
     <security-constraint>
@@ -95,7 +83,7 @@
             <web-resource-name>loginLogout</web-resource-name>
             <url-pattern>/loginAction</url-pattern>
             <url-pattern>/loginSuccess</url-pattern>
-            <url-pattern>/logoutAction.jsp</url-pattern>
+<!--            <url-pattern>/logoutAction.jsp</url-pattern>-->
         </web-resource-collection>
 
         <auth-constraint>
